DevOps/Project-206-Kubernetes-Microservice-Phonebook/file-from-lesson/resultserver-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resultserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resultserver
  template:
    metadata:
      labels:
        app: resultserver
    spec:
      containers:
      - name: resultserver-pods
        image: mehmet2020/result-server
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: resultserver-service
spec:
  type: NodePort
  selector:
    app: resultserver
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30002
