DevOps/Project-206-Kubernetes-Microservice-Phonebook/file-from-lesson/webserver-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver-pods
        image: mehmet2020/web-server
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  type: NodePort
  selector:
    app: webserver
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
